Implement updates to roles and learning objectives across api and frontend components
